--- a/monopasta/basic-page.html
+++ b/monopasta/basic-page.html
@@ -4,7 +4,7 @@
 <html>
 <head>
 
-<link rel="stylesheet" href="css/css/css/css/css/styles.css">
+<link rel="stylesheet" href="css/styles.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,700|Roboto+Condensed:700">
 
 </head>
