--- a/monopasta/basic-page.html
+++ b/monopasta/basic-page.html
@@ -5,7 +5,7 @@
 <head>
 
 <link rel="stylesheet" href="css/styles.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,700|Roboto+Condensed:700">
+<link rel="stylesheet" href="css/fonts/lato-plus-roboto-condensed.css">
 
 </head>
 <body>
